examples/fail/lexer/invalid_hex_suffix.bina
// EXPECT_LEXER_ERROR: invalid numeric suffix
fn main() -> int {
    let x = 0xFFz;
    return 0;
}
